<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/add"
            android:layout_width="88dp"
            android:layout_height="58dp"
            android:translationX="160dp"
            android:translationY="345dp"
            android:layout_marginEnd="323dp"
            android:layout_marginBottom="673dp"
            android:translationZ="90dp"
            app:layout_constraintBottom_toBottomOf="@+id/cardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cardView1"
            app:srcCompat="@drawable/ic_baseline_add_24"
            android:onClick="show_input"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="400dp"
            android:layout_height="350dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="@color/darkblue"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.081">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ListView
                    android:id="@+id/list"
                    android:layout_width="400dp"
                    android:layout_height="323dp"
                    android:background="@color/darkblue"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="1.0">

                </ListView>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/date"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/physics"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/chemistry"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/botany"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="italic|bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/zoology"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="italic|bold" />


                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/total"
                        android:textColor="@color/white"
                        android:textSize="19sp"
                        android:textStyle="italic|bold" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="353dp"
            android:layout_height="251dp"
            android:layout_below="@+id/cardView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="84dp"
            app:cardBackgroundColor="@color/darkblue"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.31">

            <EditText
                android:id="@+id/MistakeReason"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:enabled="false"/>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
